# zwift-workout-builder

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  lint.yml
tests/: test_cli.py  test_garmin_exporter.py  test_models.py  test_xml_generator.py
zwift_workout/: __init__.py  cli.py  garmin_exporter.py  models.py  xml_generator.py
