[project]
name = "zwift-workout-builder"
version = "0.1.0"
description = "CLI tool for creating structured Zwift workout files in .zwo format"
authors = [
    {name = "Neil Goodgame", email = "neil.goodgame@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "fit-tool (>=0.9.15,<0.10.0)",
]

[project.scripts]
zwift-workout = "zwift_workout.cli:main"

[tool.poetry]
packages = [{include = "zwift_workout"}]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-cov = ">=5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["zwift_workout"]
